[project]
name = "raccoonai-mcp-server"
version = "0.0.1"
description = "A MCP server for Raccoon AI LAM API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Raccoon AI" }]
maintainers = [{ name = "scorchy38", email = "shubh@flyingraccoon.tech" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "raccoonai>=0.1.0a10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"